tests/baselines/reference/nonexistentPropertyAvailableOnPromisedType.errors.txt
tests/cases/compiler/nonexistentPropertyAvailableOnPromisedType.ts(2,7): error TS2570: Property 'toLowerCase' does not exist on type 'Promise<string>'. Did you forget to use 'await'?


==== tests/cases/compiler/nonexistentPropertyAvailableOnPromisedType.ts (1 errors) ====
    function f(x: Promise<string>) {
        x.toLowerCase();
          ~~~~~~~~~~~
!!! error TS2570: Property 'toLowerCase' does not exist on type 'Promise<string>'. Did you forget to use 'await'?
    }
    